@@ -28,10 +28,10 @@ classifiers = [
 dependencies = [
     "cffi>=1.10.0",
     "jinja2",
-    "dateutils",
     "tzlocal<5.0",
     "packaging;platform_system=='Windows'",
-    "typing-extensions;python_version<'3.8'"
+    "typing-extensions;python_version<'3.8'",
+    "backports.zoneinfo;python_version<'3.9'"
 ]
 dynamic = ["version"]
 
