@@ -7,7 +7,10 @@ from . import conversion
 
 import rpy2.rlike.container as rlc
 import datetime
-import dateutils
+try:
+    import zoneinfo
+except ImportError:
+    from backports import zoneinfo  # type: ignore
 import copy
 import itertools
 import math
@@ -912,7 +915,7 @@ class POSIXct(POSIXt, FloatVector):
             init_param = seq
         elif isinstance(seq[0], struct_time):
             init_param = POSIXct.sexp_from_struct_time(seq)
-        elif isinstance(seq[0], datetime):
+        elif isinstance(seq[0], datetime.datetime):
             init_param = POSIXct.sexp_from_datetime(seq)
         else:
             raise TypeError(
@@ -943,7 +946,7 @@ class POSIXct(POSIXt, FloatVector):
                 )
 
         if tz_info is None:
-            tz_info = default_timezone.zone if default_timezone else ''
+            tz_info = default_timezone if default_timezone else ''
         # We could use R's as.POSIXct instead of ISOdatetime
         # since as.POSIXct is used by it anyway, but the overall
         # interface for dates and conversion between formats
@@ -951,7 +954,10 @@ class POSIXct(POSIXt, FloatVector):
         # time should look into this.
 
         d = isodatetime_columns(seq)
-        sexp = POSIXct._ISOdatetime(*d, tz=StrSexpVector((tz_info, )))
+        sexp = POSIXct._ISOdatetime(
+            *d,
+            tz=StrSexpVector((str(tz_info), ))
+        )
         return sexp
 
     @staticmethod
@@ -978,7 +984,7 @@ class POSIXct(POSIXt, FloatVector):
                     IntVector([x.second for x in seq])]
 
         def get_tz(elt):
-            return elt.tzinfo.zone if elt.tzinfo else None
+            return elt.tzinfo if elt.tzinfo else None
 
         return POSIXct._sexp_from_seq(seq, get_tz, f)
 
@@ -988,10 +994,10 @@ class POSIXct(POSIXt, FloatVector):
         return obj.rclass[0] == 'POSIXct'
 
     @staticmethod
-    def _datetime_from_timestamp(ts, tz) -> datetime:
+    def _datetime_from_timestamp(ts, tz) -> datetime.datetime:
         """Platform-dependent conversion from timestamp to datetime"""
         if os.name != 'nt' or ts > 0:
-            return datetime.fromtimestamp(ts, tz)
+            return datetime.datetime.fromtimestamp(ts, tz)
         else:
             dt_utc = (datetime.datetime(1970, 1, 1, tzinfo=datetime.timezone.utc) +
                       datetime.timedelta(seconds=ts))
@@ -1015,8 +1021,7 @@ class POSIXct(POSIXt, FloatVector):
             # time libraries will assume UTC.
             r_tzone = get_timezone()
         else:
-            r_tzone = dateutils.tz.tzstr(r_tzone_name)
-
+            r_tzone = zoneinfo.ZoneInfo(r_tzone_name)
         for x in self:
             yield (
                 None if math.isnan(x)
