@@ -1,5 +1,8 @@
 import datetime
-import dateutils
+try:
+    import zoneinfo
+except ImportError:
+    from backports import zoneinfo
 import pytest
 
 import time
@@ -7,7 +10,7 @@ from rpy2 import robjects
 import rpy2.robjects.vectors
 
 _dateval_tuple = (1984, 1, 6, 6, 22, 0, 1, 6, 0) 
-_zones = (None, 'America/New_York', 'Australia/Sydney')
+_zones_str = (None, 'America/New_York', 'Australia/Sydney')
 
 
 def test_POSIXlt_from_invalidpythontime():
@@ -56,21 +59,19 @@ def test_POSIXct_from_invalidobject():
         robjects.POSIXct(x)
 
 
-@pytest.fixture(scope='module', params=_zones)
+@pytest.fixture(scope='module', params=_zones_str)
 def default_timezone_mocker(request):
-    zone = request.param
-    if zone:
-        rpy2.robjects.vectors.default_timezone = dateutils.tz.tzstr(zone)
-    yield zone
+    zone_str = request.param
+    if zone_str:
+        rpy2.robjects.vectors.default_timezone = zoneinfo.ZoneInfo(zone_str)
+    yield zone_str
     rpy2.robjects.vectors.default_timezone = None
 
 
 @pytest.mark.parametrize(
     'x',
-    ([time.struct_time(_dateval_tuple),
-      time.struct_time(_dateval_tuple)],
-     [datetime.datetime(*_dateval_tuple[:-2]),
-      datetime.datetime(*_dateval_tuple[:-2])])
+    ([time.struct_time(_dateval_tuple), ] * 2,
+     [datetime.datetime(*_dateval_tuple[:-2]), ] * 2)
 )
 def test_POSIXct_from_python_times(x, default_timezone_mocker):
     res = robjects.POSIXct(x)
@@ -80,15 +81,17 @@ def test_POSIXct_from_python_times(x, default_timezone_mocker):
     assert res.slots['tzone'][0] == (zone if zone else '')
 
 
-@pytest.mark.parametrize('zone',
-                         _zones[1:])
-def test_POSIXct_from_python_pytz_timezone(zone):
-    x = [pytz.timezone(zone).localize(datetime.datetime(*_dateval_tuple[:-2])),
-         pytz.timezone(zone).localize(datetime.datetime(*_dateval_tuple[:-2]))]
+@pytest.mark.parametrize('zone_str',
+                         _zones_str[1:])
+def test_POSIXct_from_python_timezone(zone_str):
+    x = [
+        datetime.datetime(*_dateval_tuple[:-2])
+        .replace(tzinfo=zoneinfo.ZoneInfo(zone_str)),
+    ] * 2
     res = robjects.POSIXct(x)
     assert list(res.slots['class']) == ['POSIXct', 'POSIXt']
     assert len(res) == 2
-    assert res.slots['tzone'][0] == (zone if zone else '')
+    assert res.slots['tzone'][0] == (zone_str if zone_str else '')
 
 
 def testPOSIXct_fromSexp():
@@ -132,7 +135,7 @@ def test_POSIXct_datetime_from_timestamp(default_timezone_mocker):
     dt = [datetime.datetime(1900, 1, 1),
           datetime.datetime(1970, 1, 1),
           datetime.datetime(2000, 1, 1)]
-    dt = [tzone.localize(x) for x in dt]
+    dt = [x.replace(tzinfo=tzone) for x in dt]
     ts = [x.timestamp() for x in dt]
     res = [robjects.POSIXct._datetime_from_timestamp(x, tzone) for x in ts]
     for expected, obtained in zip(dt, res):
